<resources>
    <string name="app_name">东风日产</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="file_provider">com.pgyersdk.provider</string>
    <string name="prompt_user">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="rember_password">记住账号</string>
    <string name="logined_member_username">logined_member_username</string>
    <string name="logined_member_password">logined_member_password</string>
    <string name="logined_member_ischeck">logined_member_ischeck</string>
    <string name="logined_user_isoffline">logined_user_isoffline</string>
    <string name="ip_address">ip_address</string>
    <string name="login_insertOrg">login_insertOrg</string>
    <string name="login_insertSite">login_insertSite</string>
    <string name="login_personId">login_personId</string>
    <string name="login_userName">login_userName</string>
    <string name="login_displayName">login_displayName</string>
    <string name="login_UserName">loginUserName</string>
    <string name="login_department">login_department</string>
    <string name="login_n_crewid">login_n_crewid</string>
    <string name="login_error_empty_user">用户名不能为空</string>
    <string name="login_error_empty_passwd">密码不能为空</string>
    <string name="error_title">错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请开启Wifi或者移动数据网络</string>
    <string name="error_reply">提交失败</string>
    <string name="error_create_topic">无法创建新话题</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">收藏节点错误</string>
    <string name="error_fav_topic">收藏话题错误</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>
    <string name="connect_setting_title">服务器连接设置</string>
    <string name="get_data_info_fail">获取信息失败</string>
    <string name="login_successful_hint">登陆成功</string>
    <string name="tccx_text">再按一次退出程序</string>
    <string name="login_please_login">尚未登录</string>
    <string name="have_not_data_txt">暂无相关数据</string>
    <string name="setting_text">设置</string>
    <string name="loading">正在加载中...</string>
    <string name="assetnum_text">设备编号:</string>
    <string name="hint_item_num_title">暂无编号</string>
    <string name="hint_item_desc_title">暂无描述</string>
    <string name="hint_item_date_title">暂无日期</string>
    <string name="have_not_data">暂无数据</string>
    <string name="status_text">状态:</string>
    <string name="sbcx_text">设备查询</string>
    <string name="sbms_text">设备描述:</string>
    <string name="location_text">位置编码:</string>
    <string name="loc_desc_text">位置描述:</string>
    <string name="n_mantype_text">管理类型:</string>
    <string name="n_specialtype_text">设备类型:</string>
    <string name="n_importance_text">重要程度(A/B/C):</string>
    <string name="n_family_text">维护人:</string>
    <string name="n_familyname_text">维护人名称:</string>
    <string name="n_crewid_text">使用班组:</string>
    <string name="n_userdepartment_text">使用部门:</string>
    <string name="n_management_text">管理部门:</string>
    <string name="n_assetnum_text">资产编码:</string>
    <string name="n_brand_text">品牌:</string>
    <string name="n_model_text">规格型号:</string>
    <string name="n_sort_text">设备分类:</string>
    <string name="n_releasedate_text">出厂日期:</string>
    <string name="n_makername_text">制造厂商:</string>
    <string name="n_providername_text">供应商:</string>
    <string name="n_minitabdate_text">启用日期:</string>
    <string name="n_recordate_text">登记日期:</string>
    <string name="n_cardid_text">使用证号:</string>
    <string name="n_bonuscode_text">注册代码:</string>
    <string name="n_dcequipment_text">数控设备?</string>
    <string name="n_pcequipment_text">精密设备?:</string>
    <string name="n_ipequipment_text">进口设备?</string>
    <string name="n_virtual_text">虚拟设备?</string>
    <string name="siteid_text">地点:</string>
    <string name="asset_detail_text">设备详情</string>
    <string name="beijian_text">备件</string>
    <string name="jhbq_text">计划保全</string>
    <string name="ddjgd_text">定期点检工单</string>
    <string name="wtdgl_text">问题点管理</string>
    <string name="itemnum_text">物料编码:</string>
    <string name="itemnum_description_text">备件名称:</string>
    <string name="n_location_text">安装部位:</string>
    <string name="quantity_text">数量:</string>
    <string name="wonum_text">工单:</string>
    <string name="desc_text">描述:</string>
    <string name="bz_text">班组:</string>
    <string name="year_text">年度:</string>
    <string name="month_text">月度:</string>
    <string name="n_wpnum_text">周计划编号:</string>
    <string name="changeby_text">变更人:</string>
    <string name="num_text">编号:</string>
    <string name="wotask_text">点检明细行</string>
    <string name="wosequence_text">序号:</string>
    <string name="type_text">类别:</string>
    <string name="sbmc_text">设备名称:</string>
    <string name="item_text">项目:</string>
    <string name="position_text">部位:</string>
    <string name="method_text">点检方法:</string>
    <string name="rule_text">基准:</string>
    <string name="solve_text">异常处置:</string>
    <string name="hours_text">点检工时:</string>
    <string name="abc_text">重要度:</string>
    <string name="cycle_text">周期(月):</string>
    <string name="n_result_text">结果:</string>
    <string name="n_note_text">预知项目结果:</string>
    <string name="n_responsor_text">实施责任人:</string>
    <string name="n_members_text">实施人员:</string>
    <string name="kccx_text">库存查询</string>
    <string name="kcpd_text">库存盘点</string>
    <string name="jsrk_text">接收入库</string>
    <string name="wzff_text">物资发放</string>
    <string name="tk_text">退库</string>
    <string name="bjgl_text">备件管理</string>
    <string name="n_problemnum_text">问题点编号:</string>
    <string name="prodesc_text">问题点描述:</string>
    <string name="gdms_text">工单描述:</string>
    <string name="finddate_text">发现日期:</string>
    <string name="responsor_text">担当:</string>
    <string name="pl_text">生产线:</string>
    <string name="reason_text">原因:</string>
    <string name="dc_text">对策:</string>
    <string name="finishdate_text">完成日期:</string>
    <string name="jz_text">进展:</string>
    <string name="confirmby_text">确认人:</string>
    <string name="result_text">整改结果:</string>
    <string name="cgjs_text">采购接收</string>
    <string name="zklld_text">总库领料单</string>
    <string name="zkdbd_text">总库调拨单</string>
    <string name="fklld_text">分库领料单</string>
    <string name="bjjy_text">备件借用</string>
    <string name="bjgh_text">备件归还</string>
    <string name="kwzy_text">库位转移</string>
    <string name="scan_text">请将二维码/条码放入框内</string>
    <string name="scanning_text">二维码/条码扫描</string>
    <string name="result_text_id">扫描结果</string>
    <string name="cxzc_text">查询资产</string>
    <string name="wfcxsb_text">无法查询设备编号!</string>
    <string name="save_text">保存</string>
    <string name="ok_text">OK</string>
    <string name="no_text">NG</string>
    <string name="n_pb_text">问题点</string>
    <string name="n_prodesc_text">问题点录入:</string>
    <string name="n_solve_text">解决办法:</string>
    <string name="n_improver_text">改善担当:</string>
    <string name="n_finishdate_text">完成日期:</string>
    <string name="wtdll_text">问题点录入</string>
    <string name="person_text">人员</string>
    <string name="persionid_text">人员:</string>
    <string name="displaname_text">名称:</string>
    <string name="djwtdjl_text">点检问题点记录</string>
    <string name="gzjl_text">故障记录</string>
    <string name="location1_text">库房:</string>
    <string name="location_desc_text">库存描述:</string>
    <string name="binnum_text">存放位置:</string>
    <string name="udunitcost_text">单价:</string>
    <string name="issueunit_text">发放单位:</string>
    <string name="kcxq_text">库存详情</string>
    <string name="lcyl_text">库存余量</string>
    <string name="hg_text">货柜:</string>
    <string name="curbal_text">当前余量:</string>
    <string name="wonum1_text">领料单号:</string>
    <string name="sb_text">设备:</string>
    <string name="tbr_text">提报人:</string>
    <string name="tbrmc_text">提报人名称:</string>
    <string name="n_sap1_text">发货仓库:</string>
    <string name="reportdate_text">报告日期:</string>
    <string name="statusdate_text">状态日期:</string>
    <string name="totalcost_text">领料单合计:</string>
    <string name="loc_text">位置:</string>
    <string name="sqlywlmx_text">领用明细行</string>
    <string name="wlbm_text">物料编码:</string>
    <string name="n_sap5_text">申请数量:</string>
    <string name="curbal1_text">当前余量:</string>
    <string name="n_reason_text">领用原因:</string>
    <string name="lld_text">领料单号:</string>
    <string name="lymx_text">领用明细</string>
    <string name="issuetype_text">交易类型:</string>
    <string name="enterby_text">领用人:</string>
    <string name="n_usearea_text">使用区域:</string>
    <string name="positivequantity_text">申请数量:</string>
    <string name="wlmx_text">物料明细</string>
    <string name="po_text">采购接收</string>
    <string name="ddh_text">订单号:</string>
    <string name="orderdate_text">订购日期:</string>
    <string name="receipts_text">接收:</string>
    <string name="shiptoattn_text">接收人:</string>
    <string name="po_derail_text">采购订单详情</string>
    <string name="bbgx_text">版本更新</string>
    <string name="gywm_text">关于我们</string>
    <string name="zx_text">注销</string>
    <string name="add_text">新建</string>
    <string name="sys_text">扫一扫</string>
    <string name="ddname_text">担当名称:</string>
    <string name="get_type_text">获取选项值</string>
    <string name="finishdate1_text">完成日期:</string>
    <string name="n_qtyopen_text">未完成项目数:</string>
    <string name="n_qtycomp_text">已完成项目数:</string>
    <string name="poline_text">采购单行</string>
    <string name="wljs_text">物料接收</string>
    <string name="polinenum_text">行:</string>
    <string name="storeloc_text">库存地点:</string>
    <string name="issue_type_text">类型:</string>
    <string name="xzth_text">要退回项目</string>
    <string name="xzydg_text">已订购项目</string>
    <string name="enterby1_text">输入人:</string>
    <string name="xzwl_text">选择物料</string>
    <string name="n_sap3_text">实际数量:</string>
    <string name="n_happendate_text">发生日期:</string>
    <string name="estdur_text">持续时间:</string>
    <string name="n_plstoptime_text">生产线停止时间:</string>
    <string name="n_failurproblem_text">故障现象:</string>
    <string name="n_failurcause_text">故障原因:</string>
    <string name="prodesc1_text">问题点描述:</string>
    <string name="mblocation_text">目标库房:</string>
    <string name="ydsl_text">应到数量:</string>
    <string name="dgl_text">订购量:</string>
    <string name="image_text">图片上传</string>
    <string name="please_choose_upload_image_text">请选择需要上传的图片</string>
    <string name="attachment_details">图片查看</string>
    <string name="work_commit">图片上传</string>
    <string name="jfcreatedby_text">借方申请人:</string>
    <string name="werks_text">借方工厂代码:</string>
    <string name="jflocation_text">借方仓库代码:</string>
    <string name="jfsited_text">借方地点:</string>
    <string name="sqcreateddate_text">申请时间:</string>
    <string name="n_werks_text">被借方工厂代码:</string>
    <string name="n_location1_text">被借方仓库代码:</string>
    <string name="n_stieid_text">被借方地点:</string>
    <string name="jyxq_text">借用详情</string>
    <string name="avblbalance_text">可用量:</string>
    <string name="bjbm_text">备件编码:</string>
    <string name="yl_text">余量:</string>
    <string name="zydqxm_text">转移当前项目</string>
    <string name="new_hj_text">新增货架</string>
    <string name="kwxz_text">库位新增</string>
    <string name="mbdd_text_id">目标地点:</string>
    <string name="fk_tobin_text">分库存放货柜:</string>
    <string name="zk_frombin">总库存放货柜:</string>
    <string name="all_text">全选</string>
    <string name="upload_text">上传</string>
    <string name="delete_text">删除</string>
    <string name="bzcx_text">按班组查询</string>
    <string name="zdcx_text">按站点查询</string>
    <string name="sb_xz_text">设备下载</string>
</resources>