<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_main"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10">

        <TextView
            android:id="@+id/cgjs_text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dimen_5"
            android:drawableTop="@mipmap/ic_cgjs"
            android:gravity="center"
            android:text="@string/cgjs_text" />

        <TextView
            android:id="@+id/kccx_text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dimen_5"
            android:drawableTop="@mipmap/ic_kccx"
            android:gravity="center"
            android:text="@string/kccx_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20">

        <TextView
            android:id="@+id/zklld_text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dimen_5"
            android:drawableTop="@mipmap/ic_zklld"
            android:gravity="center"
            android:text="@string/zklld_text" />

        <TextView
            android:id="@+id/fklld_text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dimen_5"
            android:drawableTop="@mipmap/ic_fklld"
            android:gravity="center"
            android:text="@string/fklld_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20">


        <TextView
            android:id="@+id/bjjy_text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dimen_5"
            android:drawableTop="@mipmap/ic_bjjy"
            android:gravity="center"
            android:text="@string/bjjy_text" />

        <TextView
            android:id="@+id/bjgh_text_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dimen_5"
            android:drawableTop="@mipmap/ic_bjgl"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/bjgh_text" />

    </LinearLayout>


</LinearLayout>