<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/title_relativelayout_id"
        layout="@layout/title_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_50dp"></include>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_relativelayout_id">


        <com.dfrc.hxqh.dfrc_project.view.widght.SwipeRefreshLayout
            android:id="@+id/swipe_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/chooseitem_relativelayout"
            android:layout_below="@+id/relativeLayout_id">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"></android.support.v7.widget.RecyclerView>
        </com.dfrc.hxqh.dfrc_project.view.widght.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/have_not_data_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/have_not_data_txt"
                android:textSize="@dimen/abc_action_bar_content_inset_material" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/all_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_pre"
            android:text="@string/all_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/upload_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_pre"
            android:text="@string/upload_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/delete_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_pre"
            android:text="@string/delete_text"
            android:textColor="@color/white" />
    </LinearLayout>


</RelativeLayout>