<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/shape_corner_workorder_item"
    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/workorder_sb_title"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/wlbm_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/wlbm_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/hint_item_num_title"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/workorder_sb_title"
                android:layout_marginTop="5dp"
                android:text="@string/desc_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/desc_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/curbal1_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/curbal_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/n_sap5_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/n_sap5_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:ems="14"
                android:inputType="numberDecimal"
                android:padding="@dimen/dimen_5"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/n_sap3_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <EditText
                android:id="@+id/n_sap3_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/editsharp_03"
                android:ellipsize="end"
                android:ems="14"
                android:inputType="numberDecimal"
                android:padding="@dimen/dimen_5"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fk_tobin_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/fk_tobin_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:ems="14"
                android:padding="@dimen/dimen_5"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/zk_frombin"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/zk_frombin_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:ems="14"
                android:hint="@string/hint_item_desc_title"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@color/light_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/n_reason_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/n_reason_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:ems="14"
                android:padding="@dimen/dimen_5"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>