<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/invbalances_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/scan_linearlayout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/size_10dp">


            <TextView
                android:id="@+id/sys_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sys_text"
                android:textSize="@dimen/dimens_16dp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@mipmap/line" />

        <LinearLayout
            android:id="@+id/bzcx_linearlayout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/size_10dp">


            <TextView
                android:id="@+id/bzcx_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/bzcx_text"
                android:textSize="@dimen/dimens_16dp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@mipmap/line" />

        <LinearLayout
            android:id="@+id/zdcx_linearlayout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/size_10dp">


            <TextView
                android:id="@+id/zdcx_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/zdcx_text"
                android:textSize="@dimen/dimens_16dp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@mipmap/line" />

        <LinearLayout
            android:id="@+id/gzjl_linearlayout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/size_10dp">


            <TextView
                android:id="@+id/sb_xz_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sb_xz_text"
                android:textSize="@dimen/dimens_16dp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@mipmap/line" />
    </LinearLayout>
</LinearLayout>